--- a/app1/package.json
+++ b/app1/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "monorepo-app1",
+  "name": "@bas/monorepo-app1",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
+    "@bas/test-component": "1.0.0",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
