--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,6 @@
 {
-  "packages": ["packages/*"],
+  "packages": ["packages/*", "app1"],
   "npmClient": "yarn",
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "useWorkspaces": true
 }
