--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
   "useWorkspaces": true,
   "devDependencies": {
     "lerna": "^4.0.0"
+  },
+  "scripts": {
+    "dev": "cd app1/ && nuxt",
+    "build": "cd app1/ nuxt build",
+    "start": "cd app1/ nuxt start",
+    "generate": "cd app1/ nuxt generate",
+    "test": "cd app1/ jest"
   }
 }
