--- a/app1/package.json
+++ b/app1/package.json
@@ -14,7 +14,8 @@
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
-    "@bas/test-component": "1.0.0",
+    "@bas/test-component-a": "1.0.0",
+    "@bas/test-component-b": "1.0.0",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
