--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-  "packages": ["packages/*", "app1"],
+  "packages": ["packages/*"],
   "npmClient": "yarn",
   "version": "0.0.0",
   "useWorkspaces": true
