--- a/app1/package.json
+++ b/app1/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bas/monorepo-app1",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "dev": "nuxt",
@@ -10,24 +10,24 @@
     "test": "jest"
   },
   "dependencies": {
+    "@bas/test-component-a": "^0.0.1",
+    "@bas/test-component-b": "^0.0.1",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
-    "@bas/test-component-a": "1.0.0",
-    "@bas/test-component-b": "1.0.0",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.3.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^27.4.4",
-    "jest": "^27.4.4",
-    "vue-jest": "^3.0.4",
     "css-loader": "5.0.0",
+    "jest": "^27.4.4",
     "postcss": "13.0.0",
     "postcss-loader": "^4.1.0",
-    "postcss-url": "^10.1.1"
+    "postcss-url": "^10.1.1",
+    "vue-jest": "^3.0.4"
   }
 }
